# neurobot-hf

./: app.py  pyproject.toml  readme.md
faiss_default/: index.faiss  index.pkl
src/: documents_extractor.py  documents_merger.py
utils/: chatbot.py  text_processor.py
