[tool.poetry]
name = "llm-pdfs"
version = "0.1.0"
description = ""
authors = ["samurai-py <marioestevao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.12"
streamlit-message = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
